--- a/css/img.css
+++ b/css/img.css
@@ -33,8 +33,7 @@ li a:hover{
 }
 .d{
 	padding: 50px;
-	margin-left: 400px;
-	margin-right: 400px;
+	margin: auto;
 	background-color: #333333;
 }
 ul2{
